--- a/combiningGridFlexboxCourse/Ex_Files_CSS_Combining_Grid_and_Flexbox/Exercise Files/GridFlex/ch01/01_05/styles/base.css
+++ b/combiningGridFlexboxCourse/Ex_Files_CSS_Combining_Grid_and_Flexbox/Exercise Files/GridFlex/ch01/01_05/styles/base.css
@@ -6,3 +6,54 @@
     font-family: 'Nunito', sans-serif;
     box-sizing: border-box;
 }
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    height: 100vh;
+    border: 1px solid black;
+}
+
+nav {
+    width: 100%;
+    height: 80px;
+    background-color: rgb(184, 184, 184);
+}
+
+main {
+    width: 100%;
+    flex-grow: 1;
+}
+
+article {
+    background-color: aqua;
+    width: 100%;
+}
+
+.left-aside, .right-aside {
+    width: 100%;
+    background-color: orange;
+    height: min-content;
+}
+
+footer {
+    height: 50px;
+    background-color: blue;
+}
+
+@media (min-width: 768px) {
+    main {
+        order: 2;
+    }
+    .left-aside {
+        order: 1;
+    }
+    .right-aside {
+        order: 3;
+    }
+    footer {
+        order: 5;
+    }
+}
