--- a/combiningGridFlexboxCourse/Ex_Files_CSS_Combining_Grid_and_Flexbox/Exercise Files/GridFlex/ch03/03_05/styles/base.css
+++ b/combiningGridFlexboxCourse/Ex_Files_CSS_Combining_Grid_and_Flexbox/Exercise Files/GridFlex/ch03/03_05/styles/base.css
@@ -27,6 +27,8 @@ a {
 main.wrapper {
     max-width: 1300px;
     margin: auto;
+    display: flex;
+    flex-direction: column;
 }
 
 /* HEADER */
@@ -34,16 +36,20 @@ main.wrapper {
     background: linear-gradient(#3ab6bf5e, #1a5271c7), url('../images/hero.jpg') no-repeat top right;
     background-size: cover;
     color: #fff;
-    padding: 2rem;    
+    padding: 2rem;
+    display: flex;  
+    flex-direction: column;
 }
 
 .hero h1 {
     font-size: 3rem;
     text-shadow: 2px 2px 5px #1a5271;
     margin-right: 30px;
+    min-width: 200px;
 }
 
 .hero p {
+    max-width: 800px;
     font-size: 1.25rem;
     font-weight: 200;
     text-shadow: 2px 2px 5px #1a5271;
@@ -57,15 +63,21 @@ main.wrapper {
 /* STORIES */
 .stories {
     padding: 2rem;
+    display: grid;
+    gap: 1em;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
 .stories article {
     border: 1px solid #e2e2e2;
     border-radius: 10px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
 .stories figure {
-
+    display: grid;
+    grid-template-rows: 200px 50px;
 }
 
 .stories img {
@@ -74,11 +86,16 @@ main.wrapper {
     object-fit: cover;
     width: 100%;
     height: 250px;
+    grid-row: 1 / -1;
+    grid-column: 1 / -1;
 }
 
 .stories figcaption {
-   background-color: rgba(0,0,0,.7);
-   width: 100%;
+    background-color: rgba(0,0,0,.7);
+    width: 100%;
+    grid-row: 2 / -1;
+    grid-column: 1 / -1;
+    align-self: end;
 }
 
 .stories figcaption h3 {
@@ -109,12 +126,15 @@ footer {
     .hero {
         background-position: center center;
         padding: 4em 2em;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
     }
     
     .hero h1 {
-        text-align: right;
+        /* text-align: right; */
         max-width: 50%;
-        margin-left: auto;
+        /* margin-left: auto; */
     }
     
     .hero p {
