Chap 4 - Hero layout

--- a/combiningGridFlexboxCourse/Ex_Files_CSS_Combining_Grid_and_Flexbox/Exercise Files/GridFlex/ch04/04_02/styles/base.css
+++ b/combiningGridFlexboxCourse/Ex_Files_CSS_Combining_Grid_and_Flexbox/Exercise Files/GridFlex/ch04/04_02/styles/base.css
@@ -88,15 +88,22 @@ i {
   color: #fff;
   font-size: 20px;
   text-align: center;
+  display: grid;
+  grid-template-columns: 10px 2fr 10px;
+  grid-template-rows: .5fr 1fr 20px;
+  gap: 20px;
  }
 
 .hero img {
   margin: auto;
   padding-top: 1rem;
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
 }
 
 .hero article {
-
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
 }
 
 .hero h1 {
@@ -151,14 +158,19 @@ i {
     background: url(../images/header1_lg.jpg) no-repeat center left;
     background-size: cover;
     text-align: left;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: .25fr 1fr .25fr;
+    align-items: center;
   }
 
   .hero img {
     margin: 0 0 0 auto;
+    grid-row: 2 / 3;
   }
-
+  
   .hero article {
-   max-width: 1000px;
+    max-width: 1000px;
+    grid-column: 3 / 6;
   }
   
 }
