--- a/combiningGridFlexboxCourse/Ex_Files_CSS_Combining_Grid_and_Flexbox/Exercise Files/GridFlex/ch04/04_04/styles/base.css
+++ b/combiningGridFlexboxCourse/Ex_Files_CSS_Combining_Grid_and_Flexbox/Exercise Files/GridFlex/ch04/04_04/styles/base.css
@@ -312,18 +312,24 @@ nav .btn:hover {
 
 /* ######### 10a-ii. Navigation, Large screen rules ######### */
   .navWrap {
-
+    display: grid;
+    grid-template-columns: 100px minmax(auto, 1100px);
+    justify-content: center;
+    height: auto;
   }
-
+  
   .navToggleLabel {
     display: none;
   }
-
+  
   nav {
     position: initial;
   }
-
+  
   nav ul {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 
   }
 
