--- a/combiningGridFlexboxCourse/Ex_Files_CSS_Combining_Grid_and_Flexbox/Exercise Files/GridFlex/ch04/04_05/styles/base.css
+++ b/combiningGridFlexboxCourse/Ex_Files_CSS_Combining_Grid_and_Flexbox/Exercise Files/GridFlex/ch04/04_05/styles/base.css
@@ -289,6 +289,9 @@ nav .btn:hover {
 
 .tripList {
   list-style-type: none;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  gap: 1em;
 }
 
 .tripList li {
@@ -297,10 +300,14 @@ nav .btn:hover {
   border: solid 1px #dedede;
   box-shadow: 0 2px 5px rgba(0,0,0,0.1);
   padding: 1.8rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto minmax(140px, 1fr) auto;
 }
 
 .tripList h3, .tripList img {
-
+  grid-row: 1 / 2;
+  grid-column: 1;
 }
 
 .tripList h3 {
@@ -310,6 +317,7 @@ nav .btn:hover {
   margin-bottom: 1rem;
   text-align: center;
   text-shadow: 1px 1px 2px rgba(51,51,51,.7);
+  align-self: flex-end;
 }
 
 .trips a {
@@ -319,6 +327,9 @@ nav .btn:hover {
   height: 2rem;
   margin-top: 1rem;
   text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .trips a:hover {
@@ -422,11 +433,14 @@ nav .btn:hover {
 
 /* ######### 10a-iiI. Trips, Large screen rules ######### */
   .tripList {
-
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   }
 
   .trips article {
    width: 90%;
+   display: flex;
+   align-items: center;
+
   }
 
   .trips h1 {
@@ -434,7 +448,7 @@ nav .btn:hover {
   }
 
   .trips p {
-
+    flex: 3;
   }
 
 }
