--- a/combiningGridFlexboxCourse/Ex_Files_CSS_Combining_Grid_and_Flexbox/Exercise Files/GridFlex/ch04/04_07/styles/base.css
+++ b/combiningGridFlexboxCourse/Ex_Files_CSS_Combining_Grid_and_Flexbox/Exercise Files/GridFlex/ch04/04_07/styles/base.css
@@ -485,6 +485,9 @@ nav .btn:hover {
 /* ######### 10a-iv. CTA summaries, Large screen rules ######### */
   .cta {
     min-height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .cta1 {
