--- a/combiningGridFlexboxCourse/Ex_Files_CSS_Combining_Grid_and_Flexbox/Exercise Files/GridFlex/ch04/04_09/styles/base.css
+++ b/combiningGridFlexboxCourse/Ex_Files_CSS_Combining_Grid_and_Flexbox/Exercise Files/GridFlex/ch04/04_09/styles/base.css
@@ -576,17 +576,28 @@ nav .btn:hover {
     max-width: 1000px;
     margin: auto;
     padding: 0 1rem;
+    display: grid;
+    grid-template-columns: 1fr .5fr;
+    grid-template-rows: repeat(2, auto);
   }
 
   .team h1 {
+    order: 2;
+    grid-column: 2 / -1;
   }
 
   .teamMembers {
+    order: 1;
+    grid-column: 1 / -1;
+    align-self: center;
   }
 
   .team p {
     border-right: solid 1px #dedede;
     padding-right: 1rem;
+    order: 2;
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
   }
 
 }
