Chap 4 - footer for large and extra-large screen

--- a/combiningGridFlexboxCourse/Ex_Files_CSS_Combining_Grid_and_Flexbox/Exercise Files/GridFlex/ch04/04_14/styles/base.css
+++ b/combiningGridFlexboxCourse/Ex_Files_CSS_Combining_Grid_and_Flexbox/Exercise Files/GridFlex/ch04/04_14/styles/base.css
@@ -858,6 +858,9 @@ footer {
 
   /* ######### 10a-viii. Footer, Large screen rules ######### */
   footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr .25fr;
   }
 
   .contact {
@@ -871,6 +874,9 @@ footer {
 
   .social article{
     height: 100%;
+    display: grid;
+    grid-template-columns: 1fr .5fr;
+    align-items: center;
   }
 
   .socialIcons {
@@ -878,15 +884,16 @@ footer {
     font-size: 150%;
     padding: .5rem 0 .5rem 1rem;
   }
-
+  
   .socialIcons a {
     display: block;
   }
-
+  
   .contactInfo {
     background-color: #b6e8ff;
     color: #233156;
     padding: 1rem 0 0;
+    grid-column: 1 / -1;
   }
 
 }
