--- a/combiningGridFlexboxCourse/Ex_Files_CSS_Combining_Grid_and_Flexbox/Exercise Files/GridFlex/ch05/05_02/styles/base.css
+++ b/combiningGridFlexboxCourse/Ex_Files_CSS_Combining_Grid_and_Flexbox/Exercise Files/GridFlex/ch05/05_02/styles/base.css
@@ -640,6 +640,9 @@ form#contactForm {
   padding: .5rem;
   min-width: 200px;
   width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .contactForm button:hover {
@@ -704,10 +707,14 @@ input[type="checkbox"]:checked ~ span:before {
 .contactForm div.radioBtns {
   margin: 1em 0;
   max-width: 400px;
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-template-rows: repeat(2, 1fr);
 }
 
 .radioBtns p {
   padding-bottom: 0;
+  grid-column: span 3;
 }
 
  input[type="radio"]:first-of-type {
