--- a/combiningGridFlexboxCourse/Ex_Files_CSS_Combining_Grid_and_Flexbox/Exercise Files/GridFlex/ch05/05_03/styles/base.css
+++ b/combiningGridFlexboxCourse/Ex_Files_CSS_Combining_Grid_and_Flexbox/Exercise Files/GridFlex/ch05/05_03/styles/base.css
@@ -1053,7 +1053,8 @@ input[type="radio"]:checked ~ span:before {
     grid-template-columns: auto minmax(min-content, 580px);
     grid-template-areas:
       ". h"
-      ". p";
+      ". p"
+      ". f";
   }
 
   .form h3 {
@@ -1068,6 +1069,15 @@ input[type="radio"]:checked ~ span:before {
   /*  ########### NEW CODE START (05_03) ########### */
   form#contactForm {
     max-width: initial;
+    grid-area: f;
+    display: grid;
+    grid-template-areas: 
+      "name ph"
+      "email news"
+      "radio radio"
+      "msg msg"
+      "btn .";
+    gap: 1rem;
   }
 
   .contactForm div {
@@ -1075,26 +1085,33 @@ input[type="radio"]:checked ~ span:before {
   }
 
   .contactForm div:nth-child(1) {
+    grid-area: name;
   }
-
+  
   .contactForm div:nth-child(2) {
+    grid-area: ph;
   }
-
+  
   .contactForm div:nth-child(3) {
+    grid-area: email;
   }
-
+  
   .contactForm div:nth-child(4) {
+    grid-area: radio;
   }
-
+  
   .contactForm div:nth-child(5) {
+    grid-area: msg;
   }
-
+  
   .contactForm div:nth-child(6) {
     margin: 1.8rem 0 0;
+    grid-area: news;
   }
-
+  
   .contactForm button {
     width: 100%;
+    grid-area: btn;
   }
 
   .contactForm textarea {
